datasets/dataset_txt/mitmproxy/mitmproxy_278.txt
hkevicBB commented on 5 Jun 2018
Steps to reproduce the problem:
Clean installation of both Python and Mitmproxy (and all other dependencies, followed tutorial from https://www.adamengle.com/2016/12/08/raspberry-pi-3-mitmproxy/)
Execute any of the mitmproxy or mitmweb commands, i.e.:
mitmproxy --version
or
mitmweb -h
Results in the SyntaxError below.
Any other comments? What have you tried so far?
Tried to reinstall components, downloading the latest Mitmproxy from the web and manual installation;
rebooted the system (Raspberry Pi)
System information
Traceback (most recent call last):
File "/usr/local/bin/mitmweb", line 7, in
from mitmproxy.tools.main import mitmweb
File "/usr/local/lib/python3.5/site-packages/mitmproxy/tools/main.py", line 101
server: typing.Any = None
^
SyntaxError: invalid syntax
pi@RaspberryPi:~ $ mitmproxy --version
Traceback (most recent call last):
File "/usr/local/bin/mitmproxy", line 7, in
from mitmproxy.tools.main import mitmproxy
File "/usr/local/lib/python3.5/site-packages/mitmproxy/tools/main.py", line 101
server: typing.Any = None
^
SyntaxError: invalid syntax